Fixed assets and audio overlay