@@ -5,8 +5,9 @@ import java.io.File;
 import java.io.IOException;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
-import javax.imageio.ImageIO;
 import java.util.Timer;
+
+import javax.imageio.ImageIO;
 
 public class GameRenderer extends Canvas implements Runnable {
 
@@ -15,6 +16,7 @@ public class GameRenderer extends Canvas implements Runnable {
   SwingView view;
   ArrayList<Note> notes;
   ArrayList<String> timings = new ArrayList<>();
+  //private JFrame frame;
   double acc = 0.0;
   private int timeMS;
   private int timeUntilCapture = 0;
@@ -102,6 +104,16 @@ public class GameRenderer extends Canvas implements Runnable {
 
     this.imageGrabber = imageGrabber;
 
+    // Creating the render window
+//    this.setPreferredSize(new Dimension(1200, 1200));
+//    frame = new JFrame("Osu!Mania Renderer");
+//    frame.add(this);
+//    frame.pack();
+//    frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+//    frame.setLocationRelativeTo(null); // Center the window
+//    frame.setResizable(false);
+//    frame.setVisible(false);
+
     File folder = new File(saveDirectory);
 
     File folder_0 = new File(videoFile);
@@ -123,6 +135,10 @@ public class GameRenderer extends Canvas implements Runnable {
         }
       }
     }
+  }
+
+  public ArrayList<Note> getJudgements() {
+    return judgements;
   }
 
   public boolean nextValidLNExist(String key, int initialHit) {
@@ -175,6 +191,11 @@ public class GameRenderer extends Canvas implements Runnable {
 
     converter.createVideoFromImages(ffmpegPath, inputPattern, outputVideo, framerate, audioOverlay
             , audioFile, videoFile, outputFile, offset, view);
+
+    //frame.dispatchEvent(new WindowEvent(frame, WindowEvent.WINDOW_CLOSING));
+    // frame.dispose();  // Dispose of the JFrame
+    //timer.cancel();
+    //timer.purge();
   }
 
   public void checkEvents() {
@@ -274,11 +295,11 @@ public class GameRenderer extends Canvas implements Runnable {
     // Initialize graphics objects if not already done
     //could bring back
     // Prepare for rendering
-    //    BufferStrategy bs = this.getBufferStrategy();
-    //    if (bs == null) {
-    //      this.createBufferStrategy(3);
-    //      return;
-    //    }
+//    BufferStrategy bs = this.getBufferStrategy();
+//    if (bs == null) {
+//      this.createBufferStrategy(3);
+//      return;
+//    }
 
     // Clear the image
 
@@ -286,13 +307,13 @@ public class GameRenderer extends Canvas implements Runnable {
 
     //could bring back
     // Display the image on screen
-    //    Graphics g = bs.getDrawGraphics();
-    //    try {
-    //      g.drawImage(image, 0, 0, null);
-    //    } finally {
-    //      g.dispose();
-    //    }
-    //    bs.show();
+//    Graphics g = bs.getDrawGraphics();
+//    try {
+//      g.drawImage(image, 0, 0, null);
+//    } finally {
+//      g.dispose();
+//    }
+//    bs.show();
 
     // Sync with the display to avoid tearing
     Toolkit.getDefaultToolkit().sync();
@@ -325,7 +346,7 @@ public class GameRenderer extends Canvas implements Runnable {
     }
 
     if (judgementRenders.size() > 1) {
-      judgementRenders.removeFirst(); // Remove the oldest judgement to keep the list small
+      judgementRenders.remove(0); // Remove the oldest judgement to keep the list small
     }
 
     int count = 100;
@@ -676,6 +697,25 @@ public class GameRenderer extends Canvas implements Runnable {
     saveThread.start();
   }
 
+
+//  @Override
+//  public void run() {
+//    timer = new Timer();
+//    timer.scheduleAtFixedRate(new TimerTask() {
+//      @Override
+//      public void run() {
+//        render();
+//        checkEvents();
+//        System.out.println(timeMS);
+//        timeMS += timeMulti; // increment the timer
+//        timeUntilCapture += timeMulti;
+//      }
+//    }, 0, 1); //1 ms delay
+//  }
+
+
+
+
   @Override
   public void run() {
     long startTime = System.nanoTime();
@@ -691,7 +731,7 @@ public class GameRenderer extends Canvas implements Runnable {
 
         render();
         checkEvents();
-        timeMS += timeMulti;
+        timeMS += timeMulti; // increment the timer
         timeUntilCapture += timeMulti;
         startTime = currentTime;
       }
